src/main/java/com/example/tnovel_backend/exception/error/ErrorCode.java
package com.example.tnovel_backend.exception.error;

import org.springframework.http.HttpStatus;

public interface ErrorCode {
    HttpStatus getHttpStatus();
    String getMessage();
    String name();
}
